<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.users.LoginActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_activity_title"
        ></TextView>
    <EditText
        android:id="@+id/login_email"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textNoSuggestions"
        android:importantForAutofill="no"
        android:cursorVisible="true"
        android:hint="@string/login_id"
        android:singleLine="true"
        android:background="@drawable/form"></EditText>

    <EditText
        android:id="@+id/login_password"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textNoSuggestions|textPassword"
        android:importantForAutofill="no"
        android:cursorVisible="true"
        android:hint="@string/login_password"
        android:singleLine="true"
        android:background="@drawable/form"></EditText>
    <Button
        android:id="@+id/login_page_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"></Button>
    <CheckBox
        android:id="@+id/auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login">
    </CheckBox>
    <Button
        android:id="@+id/login_page_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"></Button>


</LinearLayout>