<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sign_up">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/email"
            tools:ignore="LabelFor"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textMultiLine|textNoSuggestions"
            android:importantForAutofill="no"
            android:cursorVisible="true"
            android:hint="@string/login_id"
            android:background="@drawable/form"></EditText>
        <Button
            android:id="@+id/overlap_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_check"
            ></Button>

    </LinearLayout>

    <EditText
        android:id="@+id/password"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine|textNoSuggestions|textPassword"
        android:importantForAutofill="no"
        android:cursorVisible="true"
        android:hint="@string/login_password"
        android:background="@drawable/form"></EditText>

    <EditText
        android:id="@+id/name"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine|textNoSuggestions"
        android:importantForAutofill="no"
        android:cursorVisible="true"
        android:hint="@string/user_name"
        android:background="@drawable/form"></EditText>

    <EditText
        android:id="@+id/department"
        tools:ignore="LabelFor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine|textNoSuggestions"
        android:importantForAutofill="no"
        android:cursorVisible="true"
        android:hint="@string/user_department"
        android:background="@drawable/form"></EditText>

    <Button
        android:id="@+id/admit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/sign_up"
        >

    </Button>
</LinearLayout>