<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity"
    android:weightSum="13">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:orientation="horizontal"
            android:layout_weight="1">
                <Button
                    android:id="@+id/my_page_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myPage"
                    android:layout_gravity="end"
                    >
                </Button>
                <Button
                    android:id="@+id/logout_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_gravity="end"
                    >
                </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">
                <Spinner
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="12dp"
                    android:id="@+id/spinner"
                    android:entries="@array/district"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:prompt="@string/district_prompt"/>
                <EditText
                    android:id="@+id/search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7">
                </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="11">
                <ListView
                    android:id="@+id/listView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
        </LinearLayout>

</LinearLayout>
